@@ -1,6 +1,8 @@
 import pytest
 import morepath
-from morepath.error import DirectiveReportError
+from morepath.error import DirectiveReportError, ConflictError
+from .fixtures import conflicterror
+from morepath.compat import text_type
 
 
 def test_missing_arguments_in_path_function_error():
@@ -72,3 +74,13 @@ def test_config_error_is_also_directive_report_error():
 
     with pytest.raises(DirectiveReportError):
         config.commit()
+
+
+def test_conflict_error_should_report_line_numbers():
+    config = morepath.setup()
+    config.scan(conflicterror)
+    with pytest.raises(ConflictError) as e:
+        config.commit()
+    v = text_type(e.value)
+    assert 'line 8' in v
+    assert 'line 15' in v
